--- a/gonu-resume-website/public/index.html
+++ b/gonu-resume-website/public/index.html
@@ -19,6 +19,8 @@
     href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
     rel="stylesheet"
   />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
